--- a/app/src/main/res/layout/item_words_list_with_translation.xml
+++ b/app/src/main/res/layout/item_words_list_with_translation.xml
@@ -5,13 +5,15 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:background="@color/color_white">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Word"
+            android:text="World"
             android:id="@+id/textViewWordsListItemWord"
             android:textColor="@color/color_black"
             android:layout_alignRight="@+id/textViewWordsListItemTranslation"
@@ -28,7 +30,7 @@
             android:id="@+id/textViewWordsListItemTranslation"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:textColor="@color/color_black"
+            android:textColor="@color/color_gray"
             android:layout_below="@+id/textViewWordsListItemWord"
             android:layout_marginLeft="10dp"
             android:layout_toLeftOf="@+id/imageViewWordsListItemPlayWord"
