--- a/app/src/main/res/layout/footer_custom_translation.xml
+++ b/app/src/main/res/layout/footer_custom_translation.xml
@@ -3,4 +3,49 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Перевод:"
+        android:textColor="@color/color_gray"
+        android:layout_marginLeft="10dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/editTextCreateWordCustomTranslation"
+        android:layout_gravity="center_horizontal"
+        android:hint="Введите перевод"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Часть речи:"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/color_gray" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerCreateWordCustomPart"
+        android:layout_gravity="center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Род:"
+        android:layout_marginLeft="10dp"
+        android:textColor="@color/color_gray" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerCreateWordCustomGender"
+        android:layout_gravity="center_horizontal" />
+
 </LinearLayout>
