--- a/app/src/main/res/layout/item_words_list_with_translation.xml
+++ b/app/src/main/res/layout/item_words_list_with_translation.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
-        android:background="@color/color_white">
+        android:paddingTop="@dimen/dimen_5"
+        android:paddingBottom="@dimen/dimen_5"
+        android:paddingLeft="@dimen/dimen_10"
+        android:paddingRight="@dimen/dimen_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,14 +38,14 @@
             android:layout_alignParentStart="true"
             android:textColor="@color/color_gray"
             android:layout_below="@+id/textViewWordsListItemWord"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="@dimen/dimen_10"
             android:layout_toLeftOf="@+id/imageViewWordsListItemPlayWord"
             android:layout_toStartOf="@+id/imageViewWordsListItemPlayWord"
             android:singleLine="true" />
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/dimen_30"
+            android:layout_height="@dimen/dimen_30"
             android:id="@+id/imageViewWordsListItemSetFavorite"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
@@ -49,14 +55,14 @@
             android:layout_marginRight="10dp" />
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/dimen_25"
+            android:layout_height="@dimen/dimen_25"
             android:id="@+id/imageViewWordsListItemPlayWord"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/imageViewWordsListItemSetFavorite"
             android:layout_toStartOf="@+id/imageViewWordsListItemSetFavorite"
             android:src="@drawable/ic_sound"
             android:layout_alignBottom="@+id/imageViewWordsListItemSetFavorite"
-            android:layout_marginRight="15dp" />
+            android:layout_marginRight="@dimen/dimen_15" />
     </RelativeLayout>
 </LinearLayout>
