--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
 
     <dimen name="dimen_10">10dp</dimen>
     <dimen name="dimen_15">15dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
 
     <dimen name="dimen_20">20dp</dimen>
     <dimen name="dimen_22">22dp</dimen>
