--- a/app/src/main/res/layout/fragment_category_picker.xml
+++ b/app/src/main/res/layout/fragment_category_picker.xml
@@ -29,5 +29,6 @@
         app:fabSize="normal"
         app:layout_anchor="@id/coordinatorLayout"
         app:layout_anchorGravity="bottom|right|end"
-        app:rippleColor="#F06292"/>
+        app:rippleColor="#F06292"
+        app:layout_behavior="ua.madless.lingowl.ui.view.fab_behavior.ScrollAwareFABVanishBehavior"/>
 </android.support.design.widget.CoordinatorLayout>
