--- a/app/src/main/res/layout/item_translations_list.xml
+++ b/app/src/main/res/layout/item_translations_list.xml
@@ -7,53 +7,52 @@
     android:paddingLeft="@dimen/dimen_10"
     android:paddingRight="@dimen/dimen_5">
 
-    <ImageView
-        android:layout_width="20dp"
-        android:layout_height="15dp"
-        android:id="@+id/imageViewSelectedTranslation"
-        android:background="@drawable/ic_ok"
-        android:layout_weight="1"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/linearLayout"
-        android:visibility="gone" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Перевод слова Перевод слова Перевод слова Перевод слова"
+        android:id="@+id/textViewWordTranslation"
+        android:layout_weight="8"
+        android:textColor="@color/color_black"
+        android:singleLine="true"
+        android:layout_toLeftOf="@+id/imageViewSelectedTranslation"
+        android:layout_toStartOf="@+id/imageViewSelectedTranslation" />
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:id="@+id/linearLayout"
         android:layout_toLeftOf="@+id/imageViewSelectedTranslation"
-        android:layout_toStartOf="@+id/imageViewSelectedTranslation">
+        android:layout_toStartOf="@+id/imageViewSelectedTranslation"
+        android:layout_below="@+id/textViewWordTranslation">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Перевод слова"
-            android:id="@+id/textViewWordTranslation"
-            android:layout_weight="8"
-            android:textColor="@color/color_black"
-            android:singleLine="true"/>
+            android:text="мест. им."
+            android:id="@+id/textViewWordPart" />
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="сущ."
-            android:id="@+id/textViewWordPart"
-            android:layout_weight="2" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="м."
+            android:text="ср."
             android:id="@+id/textViewGender"
-            android:layout_weight="1" />
+            android:layout_marginLeft="@dimen/dimen_15" />
 
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:id="@+id/imageViewSelectedTranslation"
+        android:background="@drawable/ic_ok"
+        android:layout_weight="1"
+        android:layout_alignParentRight="true"
+        android:visibility="visible"
+        android:layout_alignTop="@+id/textViewWordTranslation" />
 
 </RelativeLayout>
